--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -3471,7 +3471,7 @@ License - nucleoapp.com/license/
 .main-panel {
   position: relative;
   float: right;
-  width: calc(100% - 260px);
+  width: 100%;
   background-color: #f4f3ef;
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -4805,5 +4805,3 @@ License - nucleoapp.com/license/
 
 *, *:focus, a, a:focus {
   outline: none; }
-
-/*# sourceMappingURL=paper-dashboard.css.map */
